# Sistema-para-mapeo-de-interiores-y-asistencia-en-la-navegaci-n-mediante-TurtleBot-4---TFG

./: README.md
real_robot/: chronypc.conf  chronyrpi.conf  robot_guia.py
turtlebot4_guidance_system/: CMakeLists.txt  package.xml  tutorial_commands_history.bash
turtlebot4_guidance_system/config/: nav2.yaml
turtlebot4_guidance_system/launch/: dis_sim.launch.py  localization.launch.py  nav2.launch.py  robot_description.launch.py  sim.launch.py  sim_turtlebot_nav.launch.py  sim_turtlebot_slam.launch.py  sistema_guiado.launch.py  slam.launch.py  turtlebot4_spawn.launch.py
turtlebot4_guidance_system/maps/: abiertas.pgm  abiertas.yaml  prueba_1.pgm  prueba_1.yaml
turtlebot4_guidance_system/scripts/: pruebasnav.py  robot_guia_gui.py
turtlebot4_guidance_system/urdf/standard/: turtlebot4.urdf.xacro
turtlebot4_guidance_system/worlds/: mundo.txt  mundo_abiertas.dae  mundo_abiertas.sdf  mundo_prohibido.dae  mundo_prohibido.sdf  prueba_1.sdf
yolobot/: package.xml  setup.py
yolobot/yolobot/: yolo_detector.py
